<resources>
    <string name="app_name">Links</string>
    <string name="retry">RETRY</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="login_desc">Find and submit all your favourite contents pulled from the internet</string>

    <!--    <string name="google_login_client_id">462718902784-rcprbqj4jn5s94aelt0phmhhhk5qb0al.apps.googleusercontent.com</string>
    <string name="client_id_google">462718902784-u12onkb2skcgfg9ktitq4fe4grf45497.apps.googleusercontent.com</string>
    <string name="client_id">462718902784-rcprbqj4jn5s94aelt0phmhhhk5qb0al.apps.googleusercontent.com</string>
    <string name="client_secret">V3duTeZDM0fy86q9wBIm79er</string>-->


    <string name="client_id">4249091141-ujh4qvbr0upf04spdi4gdlobjsso93qb.apps.googleusercontent.com</string>
    <string name="client_secret">Mr790GXVdigCCjvYyUr7K9Ao</string>

    <string name="id_client">4249091141-jud3uselkue7j9ptmcdptaomo8h1g8o6.apps.googleusercontent.com</string>

    <string name="google_login_id">4249091141-ujh4qvbr0upf04spdi4gdlobjsso93qb.apps.googleusercontent.com</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboard_main_1">FILTER</string>
    <string name="onboard_main_2">SHARE</string>
    <string name="onboard_main_3">MANAGE</string>
    <string name="onboard_sub_1">Find exciting links based on your interests and categorize it according to your needs.</string>
    <string name="onboard_sub_2">Share all your favorite contents and also the contents you post to the world to see and learn.</string>
    <string name="onboard_sub_3">Save all your favorite websites under one roof and manage it. Enjoy surfing!!</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="my_account">My Account</string>
    <string name="about_us">About us</string>
    <string name="share_our_app">Share our app</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_us">Rate us</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="bio_desc">Please update your bio by clicking on the edit profile button.</string>
    <string name="add_link">Add Link</string>
    <string name="status_public">Public - Share your link as post</string>
    <string name="status_private">Private - Only you could see this post</string>
    <string name="tab1_label">My Links</string>
    <string name="tab2_label">Saved Links</string>
    <string name="links_feedback_subject">Feedback for Links App</string>
    <string name="dev_mail">linksofficial28@gmail.com</string>
    <string name="enter_title">Please enter the title</string>
    <string name="enter_url">Please enter a valid URL</string>
    <string name="post_deleted">Post deleted</string>

</resources>