<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.home.fragments.MyAccountFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_app_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_links_round_icon_toolbar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_16"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/my_account"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/iv_app_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_log_out"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_16"
                    android:src="@drawable/ic_links_round_icon_toolbar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_16"
                    android:fontFamily="@font/lato_bold"
                    android:text="HARISH. V"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_16"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:text="@string/loremIpsum"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_16"
                    android:backgroundTint="@color/secondaryColor"
                    android:drawableLeft="@drawable/ic_edit"
                    android:paddingHorizontal="80dp"
                    android:paddingVertical="10dp"
                    android:text="EDIT PROFILE"
                    app:elevation="6dp"
                    android:textAlignment="center"
                    app:cornerRadius="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="40dp"
                    android:background="#C4C4C4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="@dimen/margin_16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_info"
                        android:drawablePadding="34dp"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:text="@string/about_us"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_share"
                        android:drawablePadding="34dp"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:text="@string/share_our_app"
                        android:layout_marginTop="24dp"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_contact_us"
                        android:drawablePadding="34dp"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:text="@string/contact_us"
                        android:layout_marginTop="24dp"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_rate_us"
                        android:drawablePadding="34dp"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:text="@string/rate_us"
                        android:layout_marginTop="24dp"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>